# quantum-computing-with-autoregressive-models

./: README.md  attention.py  attention_qc.py  attention_wave_function.py  pyproject.toml  qc_backends.py  utils.py  wave_function.py
.github/: actions.yml
qucomp_autoreg/: utils.py
qucomp_autoreg/attention/: attention.py
qucomp_autoreg/backends/: qc_backends.py
qucomp_autoreg/tn_circuits/: circuit_mpo.py
qucomp_autoreg/wave_functions/: attention_wave_function.py
tests/: test_qucomp_autoreg.py
